--- a/EcommerceUserPanel/appsettings.json
+++ b/EcommerceUserPanel/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings1":{
+
+    "dbConnection": "Data Source=TRD-517;Initial Catalog=ShoppingDemoooo2;Integrated Security=true;"
+  }
 }
