--- a/EcommerceUserPanel/appsettings.json
+++ b/EcommerceUserPanel/appsettings.json
@@ -1,15 +1,17 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EcommerceUserPanel-CB9CB6C5-7FC3-4FCF-978A-12C78B4251BA;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "dbConnection": "Data Source=TRD-517;Initial Catalog=ShoppingDemoooo2;Integrated Security=true;"
+  },
+  "Stripe": {
+    "SecretKey": "sk_test_mw9D3FTVh2LgeIVTY3ZYyLY600GlJdMztj",
+    "PublishableKey": "pk_test_bnzP9LirXfUDqbvz7WhmiUTe00xyt4I2yH"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings1":{
+  "AllowedHosts": "*"
 
-    "dbConnection": "Data Source=TRD-517;Initial Catalog=ShoppingDemoooo2;Integrated Security=true;"
-  }
 }
