--- a/EcommerceUserPanel/EcommerceUserPanel.csproj
+++ b/EcommerceUserPanel/EcommerceUserPanel.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.7" PrivateAssets="All" />
+    <PackageReference Include="Stripe.net" Version="25.6.0" />
   </ItemGroup>
 
 </Project>
